--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/router": "^8.2.13",
     "@angular/service-worker": "^8.0.0",
     "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@digitalascetic/ngx-pica": "^8.0.2",
     "@mli/analytics": "^7.0.2",
     "@nebular/auth": "4.4.0",
     "@nebular/eva-icons": "4.4.0",
@@ -52,12 +53,14 @@
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^7.0.0",
     "bootstrap": "4.3.1",
+    "canvas": "^2.6.0",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
     "echarts": "^4.4.0",
     "eva-icons": "^1.1.1",
+    "exif-js": "^2.3.0",
     "guid-typescript": "^1.0.9",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
@@ -72,6 +75,7 @@
     "node-sass": "^4.13.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
+    "pica": "^5.1.0",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
